# flask-restx-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  celery_app.py  entrypoint.sh  makefile  manage.py  manifest.json  pyproject.toml  tox.ini
{{cookiecutter.repo_name}}/tests/: __init__.py  test_alive.py  test_celery_alive.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: __init__.py  celery_utils.py  config.py  wsgi.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/apis/: __init__.py  alive.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/apis/alive/: api.py  tasks.py
